tests/invalid/replace_error/replace_field_self_use.facet
struct Slot {
  mut x: affine isize
}

fn main() -> affine isize {
  let mut s: affine Slot = Slot { x = 1 };
  (replace s.x s.x)
}
